[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Char.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/RoadBlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/sky.png" type="Texture" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/backgrounds.png" type="Texture" id=5]
[ext_resource path="res://scenes/CharUnder.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Level.gd" type="Script" id=7]
[ext_resource path="res://sounds/happy_crowd.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/Side.tscn" type="PackedScene" id=9]
[ext_resource path="res://sounds/bells.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/level_start.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 206, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 440 )

[node name="Level" type="Node2D"]
script = ExtResource( 7 )

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 192, 65 )
scale = Vector2( 384, 1 )
z_index = -10
texture = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
z_index = -9
texture = ExtResource( 5 )
centered = false
vframes = 3
hframes = 2

[node name="RoadBlocks" type="Node2D" parent="."]

[node name="RoadBlock" parent="RoadBlocks" instance=ExtResource( 2 )]
position = Vector2( 205, 137 )

[node name="Sides" type="Node2D" parent="."]

[node name="Side" parent="Sides" instance=ExtResource( 9 )]
position = Vector2( 205, 185 )

[node name="PanelBacks" type="Node2D" parent="."]

[node name="CharUnder" parent="." instance=ExtResource( 6 )]

[node name="OtherCars" type="Node2D" parent="."]

[node name="Char" parent="." instance=ExtResource( 1 )]
position = Vector2( 85, 137 )
collision/safe_margin = 1.0

[node name="PoliceCars" type="Node2D" parent="."]

[node name="PanelFronts" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 191, 162 )
shape = SubResource( 1 )

[node name="Wall1" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall1"]
position = Vector2( -25, -222 )
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2( 409, -224 )
shape = SubResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ComboSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 10 )
volume_db = -8.0
bus = "Level_Fx"

[node name="Tween" type="Tween" parent="ComboSound"]

[node name="PoliceTimer" type="Timer" parent="."]
one_shot = true

[node name="SlowCarTimer" type="Timer" parent="."]
one_shot = true

[node name="PanelTimer" type="Timer" parent="."]
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 1.8
one_shot = true

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = 6.0
bus = "Fx"

[node name="LevelStartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 3.0
bus = "Fx"
[connection signal="timeout" from="PoliceTimer" to="." method="_on_PoliceTimer_timeout"]
[connection signal="timeout" from="SlowCarTimer" to="." method="_on_SlowCarTimer_timeout"]
[connection signal="timeout" from="PanelTimer" to="." method="_on_PanelTimer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
